Добавлен заказчик в начисления ( не доделано)